--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
     <header>
 
     <!-- Nav Bar -->
-    <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
+    <nav id="
+    " class="navbar navbar-light navbar-expand-sm fixed-top">
     <div class="container">
       
         <!-- Social Icons -->
         <div class="row ml-1 ml-sm-0">
           <span class="contact-icon text-center">
-  <a href="mailto:ruiqigao@ucla.edu"><i class="fas fa-envelope"></i></a>
+  <a href="mailto:ruiqimgao@gmail.com"><i class="fas fa-envelope"></i></a>
   
   <a href="https://scholar.google.com/citations?user=VdlgOXoAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
   
@@ -135,9 +136,9 @@
     
 
     <div class="clearfix">
-      <p> I am a Research Scientist at Google, Brain team. I am mainly interested in generative models and representation learning. Specifically, I work on efficient and scalable learning algorithms of deep generative models, with an emphasis on <i>energy-based models</i> (EBMs), but also including other types of models. I also work on representational models with implications in neuroscience. I obtained my Ph.D. from <a href="https://www.ucla.edu">UCLA</a> advised by <a href="http://www.stat.ucla.edu/~sczhu/">Song-Chun Zhu</a> and <a href="http://www.stat.ucla.edu/~ywu/">Ying Nian Wu</a>. Prior to that, I received my B.S. degree of Statistics from <a href="http://english.pku.edu.cn">Peking University</a> in China.  </p> 
+      <p> I am a Research Scientist at Google DeepMind. I am mainly interested in generative models and representation learning. Specifically, I work on efficient and scalable learning algorithms of deep generative models, such as diffusion models and energy-based models. I also work on representational models with implications in neuroscience. I obtained my Ph.D. from <a href="https://www.ucla.edu">UCLA</a> advised by <a href="http://www.stat.ucla.edu/~sczhu/">Song-Chun Zhu</a> and <a href="http://www.stat.ucla.edu/~ywu/">Ying Nian Wu</a>. Prior to that, I received my B.S. degree of Statistics from <a href="http://english.pku.edu.cn">Peking University</a>.  </p> 
 
-      <p> <strong>Contact:</strong> <span style="font-family:'Lucida Console', monospace">ruiqigao at ucla dot edu</span> 
+      <p> <strong>Contact:</strong> <span style="font-family:'Lucida Console', monospace">ruiqimgao at gmail dot com</span> 
 
 <p><strong>Highlight research themes:</strong> </p>
 
